Moddify Request class and renew OPENAI Key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.config.import = optional:secrets.properties
+OPENAI_API_KEY = "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"
 
-hostName = "localhost"
+SPRINGBOOT_USER_NAME = "guest"
+SPRINGBOOT_PASSWORD = "guest"
+SPRINGBOOT_HOST = "localhost"
+SPRINGBOOT_PORT = 15672
+SPRINGBOOT_VIRTUALHOST= "/"
