--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,16 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-    implementation 'com.rabbitmq:amqp-client:5.17.0'                        //Rabbit mq client
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'      //Spring boot
+    implementation 'com.rabbitmq:amqp-client:5.17.0'                       //Rabbit mq client
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'     //Spring boot
     implementation 'org.springframework:spring-web:6.0.6'                  //Spring Boot for HTTP and related
     implementation 'org.springframework:spring-webmvc:6.0.6'               //Spring Boot for HTTP and related
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'    //Fasterxml jackson
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'  //Spring boot test
     testImplementation 'org.springframework.amqp:spring-rabbit-test'        //Rabbitmq/Spring
+
 }
 
 test {
